--- a/M3UF6NF1EX4/src/Vistas/InsertarAssignatures.form
+++ b/M3UF6NF1EX4/src/Vistas/InsertarAssignatures.form
@@ -119,6 +119,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="dniProfessorAssignaturesField">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="dniProfessorAssignaturesFieldActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton2">
       <Properties>
